--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,10 @@ jobs:
 #       - run: flutter pub get
 # #       - run: flutter test
 #       - run: flutter build web
-      
+      - name: Run a multi-line script
+        run: |
+          echo ${{ secrets.DOCKER_USERNAME }}
+          echo test, and deploy your project.
       - name: Log in to Docker Hub
         uses: docker/login-action@v2.0.0
         with:
