--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2.0.0
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: aaaaa
           password: ${{ secrets.DOCKER_PASSWORD }}
       
 #       - name: Extract metadata (tags, labels) for Docker
