--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,15 +23,15 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-#       - uses: actions/checkout@v3
-#       - uses: subosito/flutter-action@v2
-#         with:
-#           flutter-version: '3.0.0'
-#           channel: 'stable'
+      - uses: actions/checkout@v3
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.0.0'
+          channel: 'stable'
         
-#       - run: flutter pub get
-# #       - run: flutter test
-#       - run: flutter build web
+      - run: flutter pub get
+#       - run: flutter test
+      - run: flutter build web
       - name: Run a multi-line script
         run: |
           echo ${{ secrets.DOCKER_USERNAME }}
@@ -42,34 +42,34 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       
-#       - name: Extract metadata (tags, labels) for Docker
-#         id: meta
-#         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-#         with:
-#           images: pumec/open_cmms
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: pumec/open_cmms
       
-#       - name: Build and push Docker image
-#         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-#         with:
-#           context: .
-#           push: true
-#           tags: ${{ steps.meta.outputs.tags }}
-#           labels: ${{ steps.meta.outputs.labels }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
         
-#       - name: Azure Pipelines Action
-#         uses: Azure/pipelines@v1.2
-#         with:
-#           # Fullyqualified URL to the Azure DevOps organization along with project name(eg, https://dev.azure.com/organization/project-name or https://server.example.com:8080/tfs/DefaultCollection/project-name)
-#           azure-devops-project-url: https://dev.azure.com/xaghf/DP
-#           # Name of the Azure Pipline to be triggered
-#           azure-pipeline-name: 'python-sample-vscode-flask-tutorial'
-#           # Set/Overwrite pipeline variables
-# #           azure-pipeline-variables: # optional
-#     # Paste personal access token of the user as value of secret variable:AZURE_DEVOPS_TOKEN
-#           azure-devops-token: ${{ secrets.AZURE_DEVOPS_TOKEN }}
+      - name: Azure Pipelines Action
+        uses: Azure/pipelines@v1.2
+        with:
+          # Fullyqualified URL to the Azure DevOps organization along with project name(eg, https://dev.azure.com/organization/project-name or https://server.example.com:8080/tfs/DefaultCollection/project-name)
+          azure-devops-project-url: https://dev.azure.com/xaghf/DP
+          # Name of the Azure Pipline to be triggered
+          azure-pipeline-name: 'python-sample-vscode-flask-tutorial'
+          # Set/Overwrite pipeline variables
+#           azure-pipeline-variables: # optional
+    # Paste personal access token of the user as value of secret variable:AZURE_DEVOPS_TOKEN
+          azure-devops-token: ${{ secrets.AZURE_DEVOPS_TOKEN }}
 
-#       # Runs a set of commands using the runners shell
-#       - name: Run a multi-line script
-#         run: |
-#           echo Add other actions to build,
-#           echo test, and deploy your project.
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          echo Add other actions to build,
+          echo test, and deploy your project.
