--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,7 @@ jobs:
           # Fullyqualified URL to the Azure DevOps organization along with project name(eg, https://dev.azure.com/organization/project-name or https://server.example.com:8080/tfs/DefaultCollection/project-name)
           azure-devops-project-url: https://dev.azure.com/xaghf/DP
           # Name of the Azure Pipline to be triggered
-          azure-pipeline-name: 'python-sample-vscode-flask-tutorial'
+          azure-pipeline-name: 'New release pipeline'
           # Set/Overwrite pipeline variables
 #           azure-pipeline-variables: # optional
     # Paste personal access token of the user as value of secret variable:AZURE_DEVOPS_TOKEN
