--- a/.github/workflows/xxx.yml
+++ b/.github/workflows/xxx.yml
@@ -1,7 +1,7 @@
 name: Automatic Rebase
 on:
     release:
-        types: [deleted]
+        types: [created]
 jobs:
     rebase:
         name: Rebase
@@ -9,4 +9,4 @@ jobs:
         steps:
             - name: Mark version as ready to deleted
               run: |
-                echo ${{refs/tags/<tag_name>}}
+                echo ${GITHUB_REF#refs/tags/}
