--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,9 @@ jobs:
         with:
           flutter-version: '3.0.0'
           channel: 'stable'
-        
-      - run: ls  
+
+      - run: ls
+      - run: cd ./open_cmms
       - run: flutter pub get
 #       - run: flutter test
       - run: flutter build web
@@ -42,13 +43,13 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      
+
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: pumec/open_cmms
-      
+
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
@@ -56,7 +57,7 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-        
+
       - name: Azure Pipelines Action
         uses: Azure/pipelines@v1.2
         with:
