--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 uvicorn
-sqlalchemy
-fastapi
-eventsourcing[postgres]
-alembic
+sqlalchemy~=1.4.41
+fastapi~=0.74.1
+eventsourcing[postgres]~=9.2.16
+alembic~=1.8.1
 sqlalchemy_utils
+pydantic
