--- a/open_cmms/pubspec.yaml
+++ b/open_cmms/pubspec.yaml
@@ -35,11 +35,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.3
-  url_strategy: ^0.2.0
+  openapi_generator_annotations: ^4.0.0
+  BackendAPI:
+    path: 'api'
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  openapi_generator: ^4.0.0
+  build_runner: ^2.1.7
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
