project setup, asset management persisted

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,9 @@
 POSTGRES_USER=postgres
 POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
+POSTGRES_PORT=5432  #for event store only
 POSTGRES_PASSWORD=tpTeam11
 POSTGRES_DBNAME=cmms
+
+POSTGRES_REPLICA_PORT=5433
 
 PERSISTENCE_MODULE=eventsourcing.postgres
