--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -7,3 +7,10 @@ services:
     environment:
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
       POSTGRES_DB: $POSTGRES_DBNAME
+  postgres-eventstore:
+    image: postgres:14.1-alpine
+    ports:
+      - "5433:5432"
+    environment:
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_DB: $POSTGRES_DBNAME
