--- a/open_cmms/pubspec.yaml
+++ b/open_cmms/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   openapi_generator_annotations: ^4.0.0
   BackendAPI:
     path: 'api'
+  flutter_dotenv: ^5.0.2
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
