--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.3
   url_strategy: ^0.2.0
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
