--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,9 @@ jobs:
           channel: 'stable'
 
       - run: ls
+      - run: pwd
       - run: cd ./open_cmms
+      - run: pwd
       - run: flutter pub get
 #       - run: flutter test
       - run: flutter build web
