--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,12 @@
 POSTGRES_USER=postgres
-POSTGRES_HOST=localhost
+POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432  #for event store only
 POSTGRES_PASSWORD=tpTeam11
 POSTGRES_DBNAME=cmms
 
+POSTGRES_REPLICA_HOST=127.0.0.1
 POSTGRES_REPLICA_PORT=5433
 
 PERSISTENCE_MODULE=eventsourcing.postgres
+
+BE_PORT=8080
