--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
           flutter-version: '3.0.0'
           channel: 'stable'
       - run: flutter pub get
+        working-directory: ./open_cmms
 #       - run: flutter test
       - run: flutter build web
         working-directory: ./open_cmms
