--- a/.github/workflows/backend-build-push.yml
+++ b/.github/workflows/backend-build-push.yml
@@ -24,40 +24,19 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.0.0'
-          channel: 'stable'
-      - run: flutter pub get
-        working-directory: ./open_cmms
-#       - run: flutter test
-      - run: flutter build web
-        working-directory: ./open_cmms
-      - name: Run a multi-line script
-        run: |
-          echo ${{ secrets.DOCKER_USERNAME }}
-          echo test, and deploy your project.
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2.0.0
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
+      - name: Extract metadata (tags, labels) for Docker Backend
+        id: metabackend
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: pumec/open_cmms
-      - run: ls
-      - run: ls ./open_cmms
+          images: pumec/open_cmms-backend
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
-          file: ./open_cmms/Dockerfile
+          file: ./backend/Dockerfile
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.metabackend.outputs.tags }}
+          labels: ${{ steps.metabackend.outputs.labels }}
       - name: Azure Pipelines Action
         uses: Azure/pipelines@v1.2
         with:
