--- a/open_cmms/.env
+++ b/open_cmms/.env
@@ -1,8 +1,10 @@
 # BACKEND_URI=http://team11-21.studenti.fiit.stuba.sk/fastapi
 #BACKEND_URI=http://pumec.zapto.org:8081
 #BACKEND_URI=http://localhost:8081
-BACKEND_URI=http://localhost:8000
-#BACKEND_URI=http://pumec.zapto.org:8081
+#BACKEND_URI=http://localhost:8000
+BACKEND_URI=http://localhost:8080
+#BACKEND_URI=http://pumec.zapto.org:8080
+#BACKEND_URI=http://192.168.1.3:8080
 
 # do not change this
 #BACKEND_URI=https://klyck-dev-app-be.azurewebsites.net
