--- a/.github/workflows/pull-request-action.yml
+++ b/.github/workflows/pull-request-action.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: docker backend
+name: BE tests
 
 on:
   pull_request:
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install -r .backend/requirements-dev.txt
+      - run: pip install -r ./backend/requirements-dev.txt
       - name: Run Tests
         working-directory: ./backend/test
         run: pytest
