--- a/.github/workflows/pull-request-action.yml
+++ b/.github/workflows/pull-request-action.yml
@@ -2,7 +2,7 @@
 
 name: BE tests
 
-on: [ push, pull_request ]
+on: [ pull_request ]
 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -17,11 +17,11 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       - uses: actions/checkout@v3
-      #      - uses: isbang/compose-action@v1.4.1
-      #        with:
-      #          compose-file: "./backend/docker-compose.yml
-      #          services: |
-      #            postgres-test-replica-tests
+                - uses: isbang/compose-action@v1.4.1
+                with:
+                  compose-file: "./backend/docker-compose.yml
+                  services: |
+                    postgres-test-replica-tests
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
