--- a/.github/workflows/pull-request-action.yml
+++ b/.github/workflows/pull-request-action.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: isbang/compose-action@v1.4.1
         with:
-          compose-file: "./backend/docker-compose.yml
+          compose-file: "./backend/docker-compose.yml"
           services: |
             postgres-test-replica-tests
       - uses: actions/setup-python@v4
