--- a/open_cmms/pubspec.yaml
+++ b/open_cmms/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
     path: 'api'
   flutter_dotenv: ^5.0.2
   uuid: ^3.0.6
+  url_launcher: ^6.1.10
+
 
 dev_dependencies:
   flutter_test:
