add env to test

--- a/backend/test/.env
+++ b/backend/test/.env
@@ -10,3 +10,11 @@ POSTGRES_REPLICA_PORT=54322
 # PERSISTENCE_MODULE=eventsourcing.postgres # comented for in memory persister
 
 BE_PORT=8080
+BE_PATH=/
+
+
+FIEF_CLIENT_HOST=https://cmms.fief.dev
+FIEF_CLIENT_ID=mockthis
+FIEF_CLIENT_SECRET=mockthis
+
+FIEF_ENCRYPTION_KEY=mockthis
