--- a/open_cmms/pubspec.yaml
+++ b/open_cmms/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   uuid: ^3.0.6
   url_launcher: ^6.1.10
+  flutter_markdown: ^0.6.14
 
 
 dev_dependencies:
@@ -70,6 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
+    - news.md
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
