--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,7 @@ sqlalchemy_utils
 pydantic
 starlette~=0.17.1
 fief-client[fastapi]
+certifi>=14.05.14
+six>=1.10
+python_dateutil>=2.5.3
+urllib3>=1.15.1
