--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -62,10 +62,45 @@ services:
     environment:
       BACKEND_URI: http://localhost:8080
 
+  mariadb:
+    image: docker.io/bitnami/mariadb:10.6
+    volumes:
+      - 'mariadb_data:/bitnami/mariadb'
+    environment:
+      # ALLOW_EMPTY_PASSWORD is recommended only for development.
+      - ALLOW_EMPTY_PASSWORD=yes
+      - MARIADB_USER=bn_redmine
+      - MARIADB_DATABASE=bitnami_redmine
+    networks:
+      - common-net
+  redmine:
+    image: docker.io/bitnami/redmine:5
+    ports:
+      - '3000:3000'
+    volumes:
+      - 'redmine_data:/bitnami/redmine'
+    depends_on:
+      - mariadb
+    environment:
+      # ALLOW_EMPTY_PASSWORD is recommended only for development.
+      - ALLOW_EMPTY_PASSWORD=yes
+      - REDMINE_USERNAME=user
+      - REDMINE_PASSWORD=bitnami1
+      - REDMINE_REST_API_ENABLED=1
+      - REDMINE_DATABASE_HOST=mariadb
+      - REDMINE_DATABASE_PORT_NUMBER=3306
+      - REDMINE_DATABASE_USER=bn_redmine
+      - REDMINE_DATABASE_NAME=bitnami_redmine
+    networks:
+      - common-net
+
 volumes:
   eventstore:
   replica:
-
+  mariadb_data:
+    driver: local
+  redmine_data:
+    driver: local
 
 networks:
   common-net: {}
