--- a/open_cmms/pubspec.yaml
+++ b/open_cmms/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   uuid: ^3.0.6
   url_launcher: ^6.1.10
   flutter_markdown: ^0.6.14
+  flutter_map: ^3.1.0
+  latlong2: ^0.8.1
 
 
 dev_dependencies:
