--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,7 +4,7 @@ fastapi~=0.74.1
 eventsourcing[postgres]~=9.2.16
 alembic~=1.8.1
 sqlalchemy_utils
-pydantic
+pydantic~=1.9.2
 starlette~=0.17.1
 fief-client[fastapi]
 certifi>=14.05.14
@@ -12,3 +12,8 @@ six>=1.10
 python_dateutil>=2.5.3
 urllib3>=1.15.1
 python-redmine>=2.4.0
+taskManager~=0.2.3
+DateTime~=4.7
+pytest~=7.1.3
+python-dateutil~=2.8.2
+requests~=2.28.2
