--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,5 +15,5 @@ python-redmine>=2.4.0
 taskManager~=0.2.3
 DateTime~=4.7
 pytest~=7.1.3
-python-dateutil~=2.8.2
 requests~=2.28.2
+psycopg2-binary~=2.9.1
