--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ six>=1.10
 python_dateutil>=2.5.3
 urllib3>=1.15.1
 python-redmine>=2.4.0
+xlsxwriter~=3.1
 taskManager~=0.2.3
 DateTime~=4.7
 pytest~=7.1.3
