add som env for test

--- a/backend/test/.env
+++ b/backend/test/.env
@@ -17,6 +17,11 @@ FIEF_CLIENT_HOST=https://cmms.fief.dev
 FIEF_CLIENT_ID=mockthis
 FIEF_CLIENT_SECRET=mockthis
 
+# empty no sync
+ROAD_VIZ_API_KEY=
+ROAD_VIZ_URL_SYNC=
+
+
 FIEF_ENCRYPTION_KEY=mockthis
 
 READ_API_KEY=aaaaaaaaaaaaaa
